--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,14 @@
-# Gradle build directory
+.DS_Store
+.gradle
+gradle.properties
 /build/
+*/build/
+/out/
+*/out/
+/spark-warehouse/
 
-# IntelliJ IDEA files
-.idea/
-
-# Gradle wrapper
-/gradle/wrapper/gradle-wrapper.jar
-/gradle/wrapper/gradle-wrapper.properties
-
-# Compiled bytecode
-/classes/
-/bin/
-
-# Gradle temporary files
-/.gradle/
-
-# Caches
-/.idea_caches/
-
-# Project-specific settings
-/*.iml
-*.ipr
+### IntelliJ IDEA ###
+.idea
 *.iws
-
-# Local configuration file (for example, application.properties)
-/application-local.properties
-
-# Logs
-/log/
-*.log
-
-# IntelliJ IDEA code style settings
-/.idea/codeStyles/
-*.xml
+*.iml
+*.ipr
